--- a/pom.xml
+++ b/pom.xml
@@ -16,30 +16,29 @@
                 <configuration>
                     <programs>
                         <program>
-                            <mainClass>GitCommand</mainClass>
+                            <mainClass>Docli</mainClass>
                         </program>
                     </programs>
                 </configuration>
             </plugin>
         </plugins>
-
-
     </build>
-
-
-
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
     </properties>
-
-
-
     <dependencies>
         <dependency>
             <groupId>info.picocli</groupId>
             <artifactId>picocli</artifactId>
             <version>4.6.1</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.xerial/sqlite-jdbc -->
+        <dependency>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>3.34.0</version>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/org.springframework/spring-beans -->
